--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "lucide-react": "^0.487.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-force-graph": "^1.47.6",
+    "react-force-graph-3d": "^1.26.1",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.1.0",
+    "three": "^0.175.0",
+    "tw-animate-css": "^1.2.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +55,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^3.4.17"
   }
 }
