--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.1.0",
+    "tailwind-variants": "^1.0.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5",
     "web-vitals": "^2.1.4"
