--- a/backend/node_backend/package.json
+++ b/backend/node_backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dot-env": "^0.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
